--- a/I18N.md
+++ b/I18N.md
@@ -75,9 +75,6 @@ See `_locales/*/messages.json` files for complete list of messages.
 ## Documentación / Documentation
 
 ### Español / Spanish
-- [README.es.md](README.es.md) - Guía principal
-- [CSV_EXPORT.es.md](CSV_EXPORT.es.md) - Formato CSV
-
-### English
-- [README.md](README.md) - Main guide
-- [CSV_EXPORT.md](CSV_EXPORT.md) - CSV format
+- [README.md](README.md) - Guía principal
+- [CSV_EXPORT.md](CSV_EXPORT.md) - Formato CSV
+- [CONFIG.md](CONFIG.md) - Configuración
